--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
+    "react-spinkit": "^3.0.0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
